--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">TrueWebScraper</string>
+    <string name="web_scraping">Web Scraping</string>
+    <string name="label_get_contents">Get Web Contents</string>
+    <string name="raw_content">HTML Raw content</string>
+    <string name="loading">Loading....</string>
+    <string name="error">Error</string>
 </resources>
